# opentelemetry-lambda-container

./: README.md
lambda-function/: Cargo.toml  Dockerfile  adot-config.yaml
lambda-function/events/: s3.json
lambda-function/src/: main.rs  observability.rs
lambda-trace/: cdk.json  package.json
lambda-trace/lib/: lambda-trace-stack.ts
