[package]
name = "rust-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.6.0"
aws_lambda_events = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
http = "0.2.6"
simple-error = "0.2.3"
tokio = { version = "1.17.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log","attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter","json","registry"] }
aws-config = { version = "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-rekognition = "1.15.0"
mockall = "0.12.0"
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-aws = "0.9.0"
opentelemetry-otlp = { version = "0.14.0", features = ["grpc-tonic", "tls"] }
tracing-opentelemetry = "0.22.0"

[dev-dependencies]
fake-opentelemetry-collector = "0.17.1"